--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -226,6 +226,10 @@
    }
    header .social li { margin: 0 10px; }
 
+    /* scrolldown link */
+   header .scrolldown { display: none; }
+
+
    /* About Section
    -------------------------------------------------------------------- */
    #about .profile-pic { text-align: center; }
