--- a/css/layout.css
+++ b/css/layout.css
@@ -1116,9 +1116,10 @@ footer .social-links li:first-child { margin-left: 0; }
 #go-top a:hover { background-color: #0F9095; }
 
 
-.social .btn:first-child{
+.social .btn{
    margin-right: 30px;
 }
+
 .social .btn{
    padding-left: 30px;
    padding-right: 30px; 
@@ -1131,4 +1132,8 @@ footer .social-links li:first-child { margin-left: 0; }
 }
 .github-btn{
    background-color: #34495e !important;
+}
+
+.resume-pdf-btn {
+   margin-right: 0;
 }
