--- a/css/layout.css
+++ b/css/layout.css
@@ -1135,5 +1135,5 @@ footer .social-links li:first-child { margin-left: 0; }
 }
 
 .resume-pdf-btn {
-   margin-right: 0;
+   margin-right: 0 !important;
 }
